data/derived/sp14/progs/unify/prog3876.ml.out
Characters 29-46:
  log10 (int_of_float xs) + 1;;
        ^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         float
